--- a/TI22CSDHUEapplication/app/src/main/res/layout/activity_main.xml
+++ b/TI22CSDHUEapplication/app/src/main/res/layout/activity_main.xml
@@ -7,11 +7,11 @@
     tools:context=".MainActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/main_recyclerview"
-        android:layout_width="409dp"
-        android:layout_height="729dp"
+        android:id="@+id/rvLamps"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
