--- a/TI22CSDHUEapplication/app/src/main/res/layout/activity_detailed_lamp_popup.xml
+++ b/TI22CSDHUEapplication/app/src/main/res/layout/activity_detailed_lamp_popup.xml
@@ -184,8 +184,37 @@
         android:layout_height="wrap_content"
         android:layout_margin="20px"
         android:max="254"
+        app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/POTextViewBri" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="311dp" />
+
+    <Switch
+        android:id="@+id/POSwitchDisco"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="20px"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/POtextViewDisco"
+        app:layout_constraintTop_toTopOf="@+id/guideline" />
+
+    <TextView
+        android:id="@+id/POtextViewDisco"
+        android:layout_width="wrap_content"
+        android:layout_height="27dp"
+        android:layout_margin="20px"
+        android:layout_marginTop="12dp"
+        android:text="@string/disco_label"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/POBrightness" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
