--- a/TI22CSDHUEapplication/app/src/main/res/layout/activity_detailed_lamp_popup.xml
+++ b/TI22CSDHUEapplication/app/src/main/res/layout/activity_detailed_lamp_popup.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="20px"
         android:text="Lamp no."
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/POLampNo"
         app:layout_constraintStart_toEndOf="@+id/POImageViewColor"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -38,7 +38,6 @@
         android:layout_margin="20px"
         android:text="0"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/POTextViewLampNo"
         app:layout_constraintTop_toTopOf="parent" />
 
     <View
@@ -127,7 +126,7 @@
         android:layout_margin="20px"
         android:text="@string/hue_label"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/POImageViewColor"
         app:layout_constraintTop_toBottomOf="@+id/PODivider3" />
 
     <SeekBar
@@ -154,10 +153,10 @@
         android:id="@+id/POTtextViewSat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/sat_label"
         android:layout_margin="20px"
+        android:text="@string/sat_label"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/POImageViewColor"
         app:layout_constraintTop_toBottomOf="@+id/PODivider4" />
 
     <SeekBar
@@ -184,10 +183,10 @@
         android:id="@+id/POTextViewBri"
         android:layout_width="75dp"
         android:layout_height="27dp"
-        android:text="@string/bri_label"
         android:layout_margin="20px"
+        android:text="@string/bri_label"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/POImageViewColor"
         app:layout_constraintTop_toBottomOf="@+id/PODivider5" />
 
     <SeekBar
@@ -196,17 +195,20 @@
         android:layout_height="wrap_content"
         android:layout_margin="20px"
         android:max="254"
-        app:layout_constraintBottom_toTopOf="@+id/guideline"
+        app:layout_constraintBottom_toTopOf="@+id/PODivider6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/POTextViewBri" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="311dp" />
+    <View
+        android:id="@+id/PODivider6"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_margin="20px"
+        android:background="@android:color/darker_gray"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/POBrightness" />
 
     <Switch
         android:id="@+id/POSwitchDisco"
@@ -215,18 +217,16 @@
         android:layout_margin="20px"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/POtextViewDisco"
-        app:layout_constraintTop_toTopOf="@+id/guideline" />
+        app:layout_constraintTop_toBottomOf="@+id/PODivider6" />
 
     <TextView
         android:id="@+id/POtextViewDisco"
         android:layout_width="wrap_content"
         android:layout_height="27dp"
         android:layout_margin="20px"
-        android:layout_marginTop="12dp"
         android:text="@string/disco_label"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/POBrightness" />
+        app:layout_constraintStart_toEndOf="@+id/POImageViewColor"
+        app:layout_constraintTop_toBottomOf="@+id/PODivider6" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
