--- a/TI22CSDHUEapplication/app/src/main/res/layout/activity_detailed_lamp_popup.xml
+++ b/TI22CSDHUEapplication/app/src/main/res/layout/activity_detailed_lamp_popup.xml
@@ -27,8 +27,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="20px"
         android:text="Lamp no."
-        app:layout_constraintEnd_toStartOf="@+id/POLampNo"
-        app:layout_constraintStart_toEndOf="@+id/POImageViewColor"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -38,6 +38,7 @@
         android:layout_margin="20px"
         android:text="0"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/POTextViewLampNo"
         app:layout_constraintTop_toTopOf="parent" />
 
     <View
@@ -57,7 +58,7 @@
         android:text="-"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/POImageViewColor"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/PODivider1" />
 
     <Switch
@@ -86,7 +87,7 @@
         android:layout_marginBottom="26dp"
         android:text="Lamp name "
         app:layout_constraintBottom_toTopOf="@+id/PODivider3"
-        app:layout_constraintStart_toEndOf="@+id/POImageViewColor"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/PODivider2" />
 
     <Button
@@ -126,7 +127,7 @@
         android:layout_margin="20px"
         android:text="@string/hue_label"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/POImageViewColor"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/PODivider3" />
 
     <SeekBar
@@ -156,7 +157,7 @@
         android:layout_margin="20px"
         android:text="@string/sat_label"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/POImageViewColor"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/PODivider4" />
 
     <SeekBar
@@ -186,7 +187,7 @@
         android:layout_margin="20px"
         android:text="@string/bri_label"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/POImageViewColor"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/PODivider5" />
 
     <SeekBar
@@ -226,7 +227,7 @@
         android:layout_margin="20px"
         android:text="@string/disco_label"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/POImageViewColor"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/PODivider6" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
